# diagrams-pgf

./: .gitignore  .travis.yml  CHANGELOG.md  LICENSE  README.md  diagrams-pgf.cabal
.github/workflows/: haskell-ci.yml
examples/: group-transparency.hs  hbox.hs  sums.hs  triangle.hs
src/Diagrams/Backend/: PGF.hs  PGFSystem.hs
src/Diagrams/Backend/PGF/: CmdLine.hs  Hbox.hs  RawTex.hs  Render.hs  Surface.hs  Typeset.hs
src/Diagrams/Backend/PGF/Render/: Sys.hs
src/Diagrams/Backend/PGFSystem/: CmdLine.hs  Render.hs  Surface.hs
src/Diagrams/TwoD/: Typeset.hs
src/Graphics/Rendering/: PGF.hs  PGFSystem.hs
src/Graphics/Rendering/PGF/: Sys.hs
