Name:                diagrams-pgf
Version:             0.1.0.0
Synopsis:            PGF backend for diagrams drawing EDSL.
License:             BSD3
License-file:        LICENSE
Author:              Christopher Chalmers
Maintainer:          c.chalmers@me.com
Homepage:            http://github.com/cchalmers/diagrams-pgf
Bug-reports:         http://github.com/cchalmers/diagrams-pgf/issues
Stability:           Experimental
Category:            Graphics
Build-type:          Simple
Cabal-version:       >=1.10
Extra-source-files:  README.markdown, diagrams/*.svg
extra-doc-files:     diagrams/*.svg
Description:
  This package provides a modular backend for rendering
  diagrams created with the diagrams EDSL using the 
  TeX library PGF.

  Support for rendering LaTeX, ConTeXt and plain TeX files.
Source-repository head
  type:     git
  location: http://github.com/cchalmers/diagrams-pgf

Library
  Exposed-modules:     Diagrams.Backend.PGF
                       Diagrams.Backend.PGF.CmdLine
                       Diagrams.Backend.PGF.Surface
                       Diagrams.Backend.PGF.Render
                       Diagrams.Backend.PGF.Hbox
                       Graphics.Rendering.PGF
  Hs-source-dirs:      src
  Build-depends:       base                 >= 4.4   && < 4.8
                     , bytestring           >= 0.9   && < 1.1
                     , containers           >= 0.3   && < 0.6
                     , colour
                     , diagrams-core        >= 1.2   && < 1.3
                     , diagrams-lib         >= 1.2   && < 1.3
                     , directory            >= 1.0   && < 1.4
                     , filepath             >= 1.2   && < 1.4
                     , hashable             >= 1.1   && < 1.3
                     , mtl                  >= 2.1   && < 3.0
                     , optparse-applicative >= 0.11  && < 0.12
                     , process              >= 1.0   && < 1.3
                     , split                >= 0.1.2 && < 0.3
                     , texrunner            <= 0.0.2
                     , time                 >= 1.2   && < 1.6
                     , JuicyPixels
                     , vector
                     , zlib
  if impl(ghc < 7.6)
    build-depends:     ghc-prim
  if !os(windows)
    cpp-options: -DCMDLINELOOP
    Build-depends:     unix >= 2.4 && < 2.8

  Ghc-options:         -Wall
  default-extensions: TemplateHaskell

  default-language:    Haskell2010

