name:                diagrams-pgf
version:             2.0.0.0
synopsis:            PGF backend for diagrams drawing EDSL.
license:             BSD3
license-file:        LICENSE
author:              Christopher Chalmers
maintainer:          c.chalmers@me.com
homepage:            http://github.com/cchalmers/diagrams-pgf
bug-reports:         http://github.com/cchalmers/diagrams-pgf/issues
stability:           Experimental
category:            Graphics
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md, diagrams/*.svg
extra-doc-files:     diagrams/*.svg
description:
  This package provides a modular backend for rendering diagrams created
  with the diagrams EDSL using the TeX library PGF.
  .
  Support for rendering LaTeX, ConTeXt and plain TeX files.
source-repository head
  type:     git
  location: http://github.com/cchalmers/diagrams-pgf

library
  exposed-modules:
    Diagrams.Backend.PGF
    Diagrams.Backend.PGF.Surface
    Diagrams.Backend.PGF.Hbox
    Graphics.Rendering.PGF
  hs-source-dirs:      src
  build-depends:
    base                 >= 4.4   && < 5.0,
    bytestring,
    bytestring-builder,
    containers,
    colour,
    diagrams >= 2.0 && < 2.1,
    geometry,
    directory,
    filepath,
    hashable,
    mtl,
    optparse-applicative,
    process,
    split,
    texrunner            <= 0.0.2,
    time,
    JuicyPixels,
    vector,
    double-conversion,
    lens,
    data-default-class,
    zlib

  ghc-options:        -Wall
  default-language:    Haskell2010

